# coffea-workflow

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/agc_ttbar/: README.md  ttbar_analysis.py  ttbar_workflow.ipynb
examples/agc_ttbar/utils/: clients.py
examples/coffea_workflow/: analysis.py  workflow.ipynb
examples/coffea_workflow_histserv/: workflow_hist.ipynb
examples/coffea_workflow_lxplus/: analysis.py  lxplus_def.ipynb  worker.def  workflow_dask_lxplus.py  workflow_lxplus.py
examples/showcase/: README.md  analysis.py  analysis_with_failure.py
examples/showcase/coffea_casa/: README.md  Untitled.ipynb  parallel_vs_sequential.ipynb  workflow_coffea_casa.ipynb
examples/showcase/lxplus/: generate_def.ipynb  worker.def  workflow_lxplus.ipynb
examples/showcase/optimisation/: README.md
examples/showcase/split_strategy/: README.md  workflow_by_dataset_percentage.ipynb  workflow_no_split.ipynb  workflow_percentage.ipynb  workflow_split_by_dataset.ipynb
results/split_metadata/: manifest.json
src/coffea_workflow/: __init__.py  artifacts.py  config.py  default_producers.py  deps.py  executor.py  facilities.py  producers_utils.py  render.py
src/workflow/: __init__.py  artifacts.py  config.py  default_producers.py  deps.py  executor.py  facilities.py  producers_utils.py  snakemake_producers.py  workflow.py
tests/: conftest.py  test_artifacts.py  test_coffea_compat.py  test_config.py  test_default_producers.py  test_executor.py  test_render.py  test_snakemake_producers.py
(+13 files in other folders)
