[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "coffea-workflow"
version = "0.1.0"
description = "A workflow manager and HEP-specific extension for coffea analyses, providing partial result caching, facility factories, and configurable chunk dispatch."
authors = [
    {name = "Yana Holoborodko", email = "goloborodko.yana2016@gmail.com"},
]
license = {text = "BSD-3-Clause"}
keywords = ["HEP", "coffea", "workflow", "physics analysis", "workflow management", "execution control"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.10"
dependencies = [
    "coffea>=2026.7.0",
    "cloudpickle>=2.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/hooloobooroodkoo/coffea-workflow"
Repository = "https://github.com/hooloobooroodkoo/coffea-workflow"
Issues = "https://github.com/hooloobooroodkoo/coffea-workflow/issues"

[project.entry-points."coffea.extensions"]
workflow = "coffea_workflow"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
